🏗  Use form for geometry controls, fix html semantics

--- a/src/styles/input-range.scss
+++ b/src/styles/input-range.scss
@@ -8,6 +8,8 @@ label {
   justify-content: space-between;
   margin-left: 1em;
   padding: 0.25em 0.25em 0.005em;
+  width: 100%;
+  max-width: 100;
 }
 
 label:last-of-type {
