--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -51,7 +51,7 @@ button {
   background: var(--color-handles-focus);
 }
 
-@media (min-width: 768px) and (min-aspect-ratio: 3/5) {
+@media (min-width: 768px) and (min-aspect-ratio: 1.35) {
   .btn-group {
     justify-content: space-evenly;
   }
