--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,3 @@
-@import 'variables';
-@import 'global';
-@import 'layout';
+@import 'config/variables';
+@import 'config/utils';
+@import 'config/global';
