--- a/src/styles/config/global.scss
+++ b/src/styles/config/global.scss
@@ -1,16 +1,13 @@
 @include theme-main();
 
-html, body, .playground {
-	width: 100%;
-	height: 100%;
-  overflow: hidden;
+html, body {
+	@include cover();
 }
 
 body {
-	color: #333;
+	color: getVar(color-black);
 	margin: 0;
-  padding: var(--padding-default);
-  position: relative;
+  padding: getVar(padding-md);
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
@@ -25,7 +22,7 @@ nav > ul {
 // default from Svelte template
 
 a {
-	color: rgb(0,100,200);
+	color: getVar(play);
 	text-decoration: none;
 }
 
@@ -34,7 +31,7 @@ a:hover {
 }
 
 a:visited {
-	color: rgb(0,80,160);
+	color: getVar(handles);
 }
 
 label {
@@ -45,31 +42,31 @@ input, button, select, textarea {
 	font-family: inherit;
 	font-size: inherit;
 	-webkit-padding: 0.4em 0;
-	padding: 0.4em;
+	padding: getVar(padding-sm) getVar(padding-md);
 	margin: 0 0 0.5em 0;
 	box-sizing: border-box;
-	border: 1px solid #ccc;
+	border: 1px solid getVar(gray-1);
 	border-radius: 2px;
 }
 
 input:disabled {
-	color: #ccc;
+	color: getVar(gray-1);
 }
 
 button {
-	color: #333;
-	background-color: #f4f4f4;
+	color: getVar(color-dark);
+	background-color: getVar(color-light);
 	outline: none;
 }
 
 button:disabled {
-	color: #999;
+	color: getVar(gray-3);
 }
 
 button:not(:disabled):active {
-	background-color: #ddd;
+	background-color: getVar(gray-2);
 }
 
 button:focus {
-	border-color: #666;
+	border-color: getVar(gray-4);
 }
