--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -44,6 +44,20 @@ $theme-layout: (
   sidebar-width-lg: 300px,
 );
 
+$theme-typography: (
+  font-size-base: 1rem,
+  font-size-small: 0.75em,
+  font-size-h1: 2em,
+  font-size-h2: 1.85em,
+  font-size-h3: 1.65em,
+  font-size-h4: 1.35em,
+  font-size-h5: 0.15em,
+  
+  font-weight-light: 100,
+  font-weight-medium: 300,
+  font-weight-bold: 500,
+);
+
 $breakpoints: (
   xs: 576px,
   sm: 768px,
