--- a/src/styles/config/layout.scss
+++ b/src/styles/config/layout.scss
@@ -7,12 +7,61 @@
   overflow: hidden;
 }
 
+@mixin phone-portrait() {
+  @include max-aspect-ratio-min-width(aspect-ratio-1-1dot35, xs) {
+    @content;
+  }
+}
+
+@mixin phone-landscape() {
+  @include min-aspect-ratio-min-width(aspect-ratio-1dot35-1, xs) {
+    @content;
+  }
+}
+
+@mixin phone-landscape() {
+  @include min-aspect-ratio-min-width(aspect-ratio-1dot35-1, xs) {
+    @content;
+  }
+}
+
+@mixin phone-landscape-wide() {
+  @include min-aspect-ratio-min-width(aspect-ratio-1dot35-1, sm) {
+    @content;
+  }
+}
+
+@mixin tablet-portrait() {
+ // TODO fix portrait ipad
+ @include min-aspect-ratio-min-width(aspect-ratio-1-1dot35, md) {
+    @content;
+  }
+}
+
+@mixin tablet-landscape() {
+  @include min-aspect-ratio-min-width(aspect-ratio-1dot35-1, md) {
+    @content;
+  }
+}
+
+@mixin desktop() {
+  // TODO ?
+}
+
+// yeah
+@mixin square() {
+  @include min-aspect-ratio-min-width(aspect-ratio-1-1, md) {
+    @content;
+  }
+}
+
+
 @mixin layout-app() {
   display: grid;
   grid-template-columns: minmax(0, 1fr);
   grid-template-rows: getVar(header-height-sm) minmax(0, 1fr);
 
-  @include min-aspect-ratio( aspect-ratio-1dot35-1, xs) {
+  @include phone-landscape(){
     grid-template-columns: minmax(0, 1fr) getVar(sidebar-width-sm);
     grid-template-rows: minmax(0, 1fr);
   }
@@ -21,22 +70,18 @@
     grid-template-columns: minmax(0, 1fr) getVar(sidebar-width-md);
   }
 
-  @include min-aspect-ratio(aspect-ratio-1-1, md) {
+  @include square() {
     grid-template-columns: minmax(0, 1fr) getVar(sidebar-width-md);
     grid-template-rows: getVar(header-height-md) minmax(0, 1fr) getVar(footer-height-md);
   }
 
-  @include min-aspect-ratio( aspect-ratio-1dot35-1, md) {
-    grid-template-columns: minmax(0, 1fr) getVar(sidebar-width-lg);
-  }
-
-  @include min-aspect-ratio( aspect-ratio-1dot35-1, md) {
+  @include tablet-landscape() {
     grid-template-columns: minmax(0, 1fr) getVar(sidebar-width-lg);
     grid-template-rows: getVar(header-height-md) minmax(0, 1fr);
   }
 
   // TODO fix portrait ipad
-  @include min-aspect-ratio(aspect-ratio-1-1dot35, md) {
+  @include tablet-portrait() {
     grid-template-columns: minmax(0, 1fr);
   }
 }
@@ -46,13 +91,13 @@
   grid-row-start: 1;
   height: getVar(header-height-sm);
 
-  @include min-aspect-ratio( aspect-ratio-1dot35-1, xs) {
+  @include phone-landscape(){
     position: absolute;
     top: 0;
     right: 0;
   }
 
-  @include min-aspect-ratio(aspect-ratio-1-1, md) {
+  @include square() {
     position: unset;
     height: getVar(header-height-md);
   }
@@ -67,7 +112,7 @@
   width: 100%;
   height: 100%;
 
-  @include min-aspect-ratio( aspect-ratio-1dot35-1, xs) {
+  @include phone-landscape(){
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 1;
@@ -79,7 +124,7 @@
     grid-template-columns: minmax(0, 1fr) getVar(sidebar-width-md);
   }
 
-  @include min-aspect-ratio(aspect-ratio-1-1, md) {
+  @include square() {
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-end: 4;
@@ -87,7 +132,7 @@
     grid-template-rows: minmax(0, 1fr) getVar(footer-height-sm);
   }
 
-  @include min-aspect-ratio(aspect-ratio-1dot35-1) {
+  @include phone-landscape-wide() {
     grid-row-start: 1;
   }
 
@@ -95,8 +140,7 @@
     grid-template-columns: minmax(0, 1fr) getVar(sidebar-width-md);
   }
 
-  // TODO fix portrait ipad
-  @include min-aspect-ratio(aspect-ratio-1-1dot35, md) {
+  @include tablet-portrait() {
     grid-template-columns: minmax(0, 1fr);
   }
 }
@@ -107,21 +151,21 @@
   width: 100%;
   overflow: scroll;
 
-  @include min-aspect-ratio( aspect-ratio-1dot35-1, xs) {
+  @include phone-landscape(){
     grid-column-start: 2;
     grid-row-start: 1;
     grid-row-end: 3;
     padding-top: getVar(header-height-sm);
   }
 
-  @include min-aspect-ratio(aspect-ratio-1-1, md) {
+  @include square() {
     grid-column-start: 2;
     grid-row-start: 1;
     grid-row-end: 3;
     padding-top: getVar(header-height-sm);
   }
 
-  @include min-aspect-ratio( aspect-ratio-1dot35-1) {
+  @include phone-landscape-wide() {
     grid-row-end: 2;
   }
 }
@@ -133,16 +177,16 @@
   justify-content: center;
   width: 100%;
 
-  @include min-aspect-ratio( aspect-ratio-1dot35-1, xs) {
+  @include phone-landscape(){
     grid-column-start: 1;
     grid-row-start: 2;
   }
 
-  @include min-aspect-ratio(aspect-ratio-1-1, md) {
+  @include square() {
     grid-row-start: 2;
   }
 
-  @include min-aspect-ratio( aspect-ratio-1dot35-1) {
+  @include phone-landscape-wide() {
     grid-column-start: 2;
   }
 }
@@ -157,13 +201,13 @@
   max-width: 100%;
   max-height: 100%;
   
-  @include min-aspect-ratio( aspect-ratio-1dot35-1, xs) {
+  @include phone-landscape(){
     grid-column-start: 1;
     grid-row-start: 1;
     grid-row-end: 2;
   }
 
-  @include min-aspect-ratio( aspect-ratio-1dot35-1) {
+  @include phone-landscape-wide() {
     grid-column-start: 1;
     height: 100%;
   }
