--- a/src/styles/config/mixins.scss
+++ b/src/styles/config/mixins.scss
@@ -38,9 +38,10 @@ $_cssvars: ();
 }
 
 @mixin theme-main() {
+  @include generateCssVars($breakpoints, $theme-prefix);
   @include generateCssVars($theme-colors, $theme-prefix);
   @include generateCssVars($theme-layout, $theme-prefix);
-  @include generateCssVars($breakpoints, $theme-prefix);
+  @include generateCssVars($theme-typography, $theme-prefix);
 }
 
 /**
@@ -99,7 +100,62 @@ $_cssvars: ();
   }
 }
 
-@mixin min-aspect-ratio($aspect-ratio, $breakpoint: sm)  {
+@mixin max-width($breakpoint) {
+  @if map-has-key($breakpoints, $breakpoint) {
+    $breakpoint-value: map-get($breakpoints, $breakpoint);
+    @media (max-width: #{$breakpoint-value}){
+      @content;
+    }
+  } @else {
+    @warn 'Invalid breakpoint: #{$breakpoint}.';
+  }
+}
+
+@mixin min-and-max-width($min, $max) {
+  @if map-has-key($breakpoints, $min) and map-has-key($breakpoints, $max) {
+    $min-value: map-get($breakpoints, $min);
+    $max-value: map-get($breakpoints, $max);
+    @media (min-width: #{$min-value}) and  (max-width: #{$max-value}) {
+      @content;
+    }
+  } @else {
+    @if (map-has-key($breakpoints, $min) == false) {
+      @warn 'Invalid breakpoint min value: #{$min}.';
+    }
+
+    @if (map-has-key($breakpoints, $max) == false) {
+      @warn 'Invalid breakpoint max value: #{$max}.';
+    }
+  }
+}
+
+@mixin min-aspect-ratio($aspect-ratio)  {
+  @if map-has-key($theme-layout, $aspect-ratio){
+    $aspect-ratio-value: map-get($theme-layout, $aspect-ratio);
+    @media (min-aspect-ratio: #{$aspect-ratio-value}) {
+      @content;
+    }
+  } @else {
+    @if (map-has-key($theme-layout, $aspect-ratio) == false) {
+      @warn 'Invalid apect-ratio: #{$aspect-ratio}.';
+    }
+  }
+}
+
+@mixin max-aspect-ratio($aspect-ratio)  {
+  @if map-has-key($theme-layout, $aspect-ratio){
+    $aspect-ratio-value: map-get($theme-layout, $aspect-ratio);
+    @media (max-aspect-ratio: #{$aspect-ratio-value}) {
+      @content;
+    }
+  }  @else {
+    @if (map-has-key($theme-layout, $aspect-ratio) == false) {
+      @warn 'Invalid apect-ratio: #{$aspect-ratio}.';
+    }
+  }
+}
+
+@mixin min-aspect-ratio-min-width($aspect-ratio, $breakpoint)  {
   @if map-has-key($theme-layout, $aspect-ratio) and map-has-key($breakpoints, $breakpoint) {
     $breakpoint-value: map-get($breakpoints, $breakpoint);
     $aspect-ratio-value: map-get($theme-layout, $aspect-ratio);
@@ -117,33 +173,56 @@ $_cssvars: ();
   }
 }
 
-/* Extra Small Devices, Phones */
-@mixin max-width($breakpoint) {
-  @if map-has-key($breakpoints, $breakpoint) {
+@mixin min-aspect-ratio-max-width($aspect-ratio, $breakpoint)  {
+  @if map-has-key($theme-layout, $aspect-ratio) and map-has-key($breakpoints, $breakpoint) {
     $breakpoint-value: map-get($breakpoints, $breakpoint);
-    @media (max-width: #{$breakpoint-value}){
+    $aspect-ratio-value: map-get($theme-layout, $aspect-ratio);
+    @media (max-width: #{$breakpoint-value}) and (min-aspect-ratio: #{$aspect-ratio-value}) {
       @content;
     }
-  } @else {
-    @warn 'Invalid breakpoint: #{$breakpoint}.';
+  }  @else {
+
+    @if (map-has-key($breakpoints, $breakpoint) == false) {
+      @warn 'Invalid breakpoint: #{$breakpoint}.';
+    }
+    @if (map-has-key($theme-layout, $aspect-ratio) == false) {
+      @warn 'Invalid apect-ratio: #{$aspect-ratio}.';
+    }
   }
 }
 
-/* Extra Small Devices, Phones */
-@mixin min-and-max-width($min, $max) {
-  @if map-has-key($breakpoints, $min) and map-has-key($breakpoints, $max) {
-    $min-value: map-get($breakpoints, $min);
-    $max-value: map-get($breakpoints, $max);
-    @media (min-width: #{$min-value}) and  (max-width: #{$max-value}) {
+@mixin max-aspect-ratio-min-width($aspect-ratio, $breakpoint)  {
+  @if map-has-key($theme-layout, $aspect-ratio) and map-has-key($breakpoints, $breakpoint) {
+    $breakpoint-value: map-get($breakpoints, $breakpoint);
+    $aspect-ratio-value: map-get($theme-layout, $aspect-ratio);
+    @media (min-width: #{$breakpoint-value}) and (max-aspect-ratio: #{$aspect-ratio-value}) {
       @content;
     }
   } @else {
-    @if (map-has-key($breakpoints, $min) == false) {
-      @warn 'Invalid breakpoint min value: #{$min}.';
-    }
 
-    @if (map-has-key($breakpoints, $max) == false) {
-      @warn 'Invalid breakpoint max value: #{$max}.';
+    @if (map-has-key($breakpoints, $breakpoint) == false) {
+      @warn 'Invalid breakpoint: #{$breakpoint}.';
+    }
+    @if (map-has-key($theme-layout, $aspect-ratio) == false) {
+      @warn 'Invalid apect-ratio: #{$aspect-ratio}.';
+    }
+  }
+}
+
+@mixin max-aspect-ratio-max-width($aspect-ratio, $breakpoint)  {
+  @if map-has-key($theme-layout, $aspect-ratio) and map-has-key($breakpoints, $breakpoint) {
+    $breakpoint-value: map-get($breakpoints, $breakpoint);
+    $aspect-ratio-value: map-get($theme-layout, $aspect-ratio);
+    @media (max-width: #{$breakpoint-value}) and (max-aspect-ratio: #{$aspect-ratio-value}) {
+      @content;
+    }
+  } @else {
+
+    @if (map-has-key($breakpoints, $breakpoint) == false) {
+      @warn 'Invalid breakpoint: #{$breakpoint}.';
+    }
+    @if (map-has-key($theme-layout, $aspect-ratio) == false) {
+      @warn 'Invalid apect-ratio: #{$aspect-ratio}.';
     }
   }
 }
