✨ Minimal responsive UI

--- a/src/styles/components/controls.scss
+++ b/src/styles/components/controls.scss
@@ -1,5 +1,15 @@
 @import '../config/main.scss';
 
-.ui-controls {
+.controls {
   @include layout-footer();
+  display: flex;
+  justify-content: center;
+
+  @include phone-landscape-wide() {
+    justify-content: flex-end;
+  }
+
+  @include tablet-landscape() {
+    justify-content: flex-end;
+  }
 }
