--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -37,9 +37,10 @@ $theme-layout: (
   margin-xs: 1px,
   margin-sm: 4px,
   margin-md: 8px,
+  margin-lg: 12px,
 
-  header-height-sm: 60px,
-  header-height-md: 80px,
+  header-height-sm: 80px,
+  header-height-md: 100px,
   header-height-lg: 110px,
 
   footer-height-sm: 40px,
