--- a/src/styles/common/fieldset.scss
+++ b/src/styles/common/fieldset.scss
@@ -1,7 +1,7 @@
 @import '../config/main.scss';
 
 fieldset {
-  border: none;
-
   @include layout-fieldset();
+	border-radius: 3px;
+  border: 1px solid getVar(color-dark);
 }  
