--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -2,7 +2,7 @@
 
 .btn-emoji {
   font: menu;
-  padding: getVar(padding-xs) getVar(padding-sm);
+  padding: getVar(padding-xs) getVar(padding-md);
   margin: getVar(margin-xs);
 
   @include min-width(md) {
