✨ Responsive UI - phone, tablet, desktop, square

--- a/src/styles/components/controls.scss
+++ b/src/styles/components/controls.scss
@@ -5,11 +5,7 @@
   display: flex;
   justify-content: center;
 
-  @include phone-landscape-wide() {
-    justify-content: flex-end;
-  }
-
-  @include tablet-landscape() {
-    justify-content: flex-end;
+  @include phone-landscape() {
+    justify-content: flex-start;
   }
 }
